--- a/.github/workflows/onboarding-change-doc.yaml
+++ b/.github/workflows/onboarding-change-doc.yaml
@@ -8,7 +8,8 @@ on:
       - 'policies/api.xml'
 
 permissions:
-  pull-requests: read 
+  contents: read
+  pull-requests: read
 
 jobs:
   call-doc-generator:
