--- a/.github/workflows/onboarding-change-doc.yaml
+++ b/.github/workflows/onboarding-change-doc.yaml
@@ -2,10 +2,11 @@ name: Onboarding Change Doc
 
 on:
   pull_request:
-    branches: [main]
+    branches: 
+      - main
     paths:
       - 'config.json'
-      - 'policies/api.xml'
+      - 'policies/**.xml'
 
 permissions:
   contents: read
